--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                                 <input class="form-control" id="frequency" type="text">
                             </div>
                             <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
+                            <button class="btn btn-primary" id="update-btn" type="submit">Update</button>
                         </form>
                     </div>
                 </div>
